<resources>
    <string name="app_name">Operation Deconfinement</string>
    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="login_background">login background</string>
    <string name="close">close</string>
    <string name="login_password_confirmation_hint">Password Confirmation</string>
    <string name="phone_number">Phone Number</string>
    <string name="numero_assurance_maladie">Numero Assurance Maladie</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="complete_your_information">Complete your information</string>
    <string name="street">Street</string>
    <string name="zip_code">Zip Code</string>
    <string name="city">City</string>
    <string name="apartment">Apartment (optional)</string>
    <string name="userEmail">userEmail</string>
    <string name="userPassword">userPassword</string>
    <string name="complete">Complete</string>
    <string name="refresh">Refresh</string>
    <string name="error_network_timeout">Network timeout</string>
    <string name="passwordsMustMatch">Passwords must match!</string>
    <string name="ageRestriction">You must be 16+ to use this app!</string>
    <string name="scan_and_go">Scan and Go!</string>
</resources>