<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/loginParent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    android:backgroundTint="@color/background_primary"
    android:backgroundTintMode="add"
    android:orientation="vertical"
    tools:context=".LoggedInActivity">

    <ScrollView style="@style/parent">

        <RelativeLayout style="@style/parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:baselineAligned="false"
                android:weightSum="12">

                <LinearLayout
                    style="@style/parent"
                    android:layout_width="match_parent"
                    android:layout_weight="3"
                    android:background="@drawable/login_shape_bk"
                    android:orientation="vertical"
                    tools:ignore="InefficientWeight">

                    <ImageView
                        style="@style/parent"
                        android:background="@drawable/ic_login_bk"
                        android:contentDescription="@string/login_background"
                        android:rotation="0" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="30dp"
                android:orientation="vertical">


                <TextView
                    style="@style/headerText"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:text="@string/app_name"
                    android:textAllCaps="true" />

                <include
                    android:id="@+id/confirmation"
                    layout="@layout/layout_completion" />

                <include
                    android:id="@+id/qrView"
                    layout="@layout/layout_qr"
                    android:visibility="gone" />

            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/close"
                android:src="@android:drawable/ic_menu_close_clear_cancel" />


        </RelativeLayout>

    </ScrollView>

    <!--    <WebView-->
    <!--        android:id="@+id/webview"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent"-->
    <!--        android:visibility="visible"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

</RelativeLayout>